force-app/main/default/objects/Pago__c/fields/Codigo_de_empresa__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_empresa__c</fullName>
    <label>Código de empresa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>