force-app/main/default/objects/Pago__c/fields/codigo_proveedor__c.field-meta.xml
<CustomField>
    <fullName>codigo_proveedor__c</fullName>
    <label>Código de proveedor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>