force-app/main/default/objects/Pago__c/fields/Ejercicio__c.field-meta.xml
<CustomField>
    <fullName>Ejercicio__c</fullName>
    <label>Ejercicio</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>