force-app/main/default/objects/Pago__c/fields/Fecha_Pago__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Pago__c</fullName>
    <label>Fecha de pago</label>
    <type>Date</type>
</CustomField>