force-app/main/default/objects/Pago__c/fields/Importe_Pagado__c.field-meta.xml
<CustomField>
    <fullName>Importe_Pagado__c</fullName>
    <label>Importe pagado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>