force-app/main/default/objects/Pago__c/fields/nombre_proveedor__c.field-meta.xml
<CustomField>
    <fullName>nombre_proveedor__c</fullName>
    <label>nombre proveedor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>