force-app/main/default/objects/Pago__c/fields/Numero_Factura__c.field-meta.xml
<CustomField>
    <fullName>Numero_Factura__c</fullName>
    <label>Número de factura</label>
    <length>100</length>
    <type>Text</type>
</CustomField>