force-app/main/default/objects/Pago__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Peiddo de compra</description>
    <label>Pedido</label>
    <referenceTo>PedidoDeCompra__c</referenceTo>
    <relationshipLabel>Pagos</relationshipLabel>
    <relationshipName>Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>