force-app/main/default/objects/Pago__c/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proveedor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pagos</relationshipLabel>
    <relationshipName>Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>